--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,5 +38,6 @@ dependencies {
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
 
-    implementation(project(":AdsSystem"))
+//    implementation(project(":AdsSystem"))
+    implementation 'com.github.SandunBuddhika:AdsSystem:1.0.4'
 }
