--- a/settings.gradle
+++ b/settings.gradle
@@ -17,6 +17,7 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        maven { url = uri("https://www.jitpack.io") }
     }
 }
 rootProject.name = "AdsSystem"
