--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,11 @@ dependencies {
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
 
-//    implementation(project(":AdsSystem"))
-    implementation 'com.github.SandunBuddhika:AdsSystem:1.0.4'
+    implementation("com.google.errorprone:error_prone_annotations:2.36.0")
+
+    implementation("com.google.android.gms:play-services-ads:23.5.0")
+    implementation("androidx.annotation:annotation:1.0.0")
+    implementation("com.facebook.android:audience-network-sdk:6.18.0")
+    implementation(project(":AdsSystem"))
+//    implementation 'com.github.SandunBuddhika:AdsSystem:1.0.4'
 }
