--- a/AdsSystem/build.gradle
+++ b/AdsSystem/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     implementation("com.google.android.gms:play-services-ads:23.5.0")
     implementation("androidx.annotation:annotation:1.0.0")
     implementation("com.facebook.android:audience-network-sdk:6.18.0")
-
+    implementation ("com.airbnb.android:lottie:6.6.2")
 
 }
 project.afterEvaluate {
